# mt-agent-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/server/: main.py
app/server/templates/: _exchange.html  base.html  chat.html  home.html
data/model_compare/: hermes3_8b_20260513-161356.json  llama3.1_8b_20260513-161538.json  mistral-small_24b_20260513-161428.json  orieg_gemma3-tools_12b-ft_20260513-131348.json  qwen2.5_14b_20260513-130628.json  qwen2.5_14b_20260513-131813.json  qwen3_14b_20260513-131550.json
docs/: SPIKE-VLLM-METAL.md
docs/diagrams/: 01-deployment-topology.drawio  02-request-flow.drawio  03-data-model.drawio  README.md
internal/agent/: deps.py  prompt.py  runner.py  tools.py
internal/audit/: recorder.py
internal/store/: conversations.py
internal/tenants/: store.py
scripts/: bench_concurrency.py  compare_models.py  download_olist.py  init.sql  seed_olist.py  seed_tenants.py  start_vllm.sh
tests/: conftest.py  test_isolation.py  test_tool_security.py
