[project]
name = "mt-agent-lab"
version = "0.0.1"
description = "PoC de agente IA multi-tenant local con aislamiento estricto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-ai>=0.0.13",
    "duckdb>=1.1.3",
    "asyncpg>=0.30",
    "polars>=1.18",
    "faker>=33",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "structlog>=24",
    "numpy>=2.4.4",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
